--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -9,15 +9,21 @@
 @import url('./__image/popup__image.css');
 
 .popup {
-  font-family: 'Inter', Arial, sans-serif;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, .5);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 10;
+	display: flex;
+	position: fixed;
+	z-index: 10;
+	background-color: rgba(0, 0, 0, 0.5);
+	font-family: 'Inter', Arial, sans-serif;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	visibility: hidden;
+	transform: scale(0.95);
+	pointer-events: none;
+	transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
 }
